# linera-protocol_second

./: Cargo.toml
.github/workflows/: docker.yml
docker/: compose.sh
examples/: Cargo.toml
examples/call-intensive/: Cargo.toml
examples/counter_no_graphql/: Cargo.toml
examples/ethereum-tracker/: Cargo.toml
examples/gen-nft/: Cargo.toml
examples/infinite-loop/: Cargo.toml  README.md
examples/infinite_loop/: Cargo.toml
examples/intensive-cpu/: Cargo.toml
examples/non-fungible/: Cargo.toml
examples/reported-solutions/: Cargo.toml
examples/reported-solutions/src/: contract.rs  lib.rs  service.rs  state.rs
linera-base/: Cargo.toml
linera-base/src/: command.rs  data_types.rs  guard.rs  identifiers.rs  lib.rs  vm.rs
linera-bridge/: Cargo.toml
linera-bridge/src/: lib.rs
linera-chain/src/: block_tracker.rs  chain.rs  data_types.rs  inbox.rs  lib.rs  outbox.rs  pending_blobs.rs
linera-client/: Cargo.toml
linera-client/src/: client_context.rs  client_options.rs  storage.rs
linera-core/: Cargo.toml
linera-core/src/: data_types.rs  local_node.rs  node.rs  remote_node.rs  worker.rs
linera-ethereum/: Cargo.toml
linera-ethereum/src/: provider.rs
linera-execution/: Cargo.toml
linera-execution/solidity/: Linera.sol  LineraTypes.sol  LineraTypes.yaml  linera.sol
linera-execution/src/: applications.rs  execution.rs  execution_state_actor.rs  graphql.rs  lib.rs  resources.rs  revm.rs  runtime.rs  system.rs  (+1 more)
linera-service/: Cargo.toml
linera-storage/: Cargo.toml
linera-views/: Cargo.toml
scripts/: pgo-build.sh  run_validator_local.sh
(+207 files in other folders)
